normal/sg.yml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  Env:
    Default: cf
    Type: String

  SourceIp:
    Type: String

Resources:
# Create SG(WEB)
  web:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Web Security Group'
      VpcId:
        Fn::ImportValue: !Sub ${Env}-vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        SourceSecurityGroupId: !Ref elb
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}-web

# Create SG(Admin)
  admin:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Admin Security Group'
      VpcId:
        Fn::ImportValue: !Sub ${Env}-vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: !Ref SourceIp
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}-admin

# Create SG(ELB)
  elb:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'ELB Security Group'
      VpcId:
        Fn::ImportValue: !Sub ${Env}-vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}-elb

Outputs:
  WebSg:
    Description: Web Security Group
    Value: !Ref web
    Export:
      Name: !Sub ${AWS::StackName}-web

  AdminSg:
    Description: Admin Security Group
    Value: !Ref admin
    Export:
      Name: !Sub ${AWS::StackName}-admin

  ElbSg:
    Description: ELB Security Group
    Value: !Ref elb
    Export:
      Name: !Sub ${AWS::StackName}-elb
